<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/alert_light_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintEnd_toEndOf="@+id/checkBox4"
        app:layout_constraintStart_toStartOf="@+id/checkBox4"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintEnd_toEndOf="@+id/checkBox2"
        app:layout_constraintStart_toStartOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <TextView
        android:id="@+id/TeamBScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/teamPossessionA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/TeamAScore"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="possessionSwitcherA" />

    <Switch
        android:id="@+id/teamPossessionB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/TeamBScore"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="possessionSwitcherB" />

    <TextView
        android:id="@+id/TeamAScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/divider_horizontal_bright"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/touchdownTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="addSixForTeamA"
        android:text="@string/touchdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/TeamAScore"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/fieldgoalTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:onClick="addThreeForTeamA"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/fieldgoal"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/touchdownTeamA" />

    <Button
        android:id="@+id/touchbackTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:onClick="addTwoForTeamA"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/touchback"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/fieldgoalTeamA" />

    <ImageButton
        android:id="@+id/ExtraPointImageButtonTeamA"
        android:layout_width="39dp"
        android:layout_height="38dp"
        android:onClick="addOneForTeamA"
        app:layout_constraintBottom_toBottomOf="@+id/touchdownTeamA"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/touchdownTeamA"
        app:layout_constraintTop_toTopOf="@+id/touchdownTeamA"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <Button
        android:id="@+id/touchdownTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="addSixForTeamB"
        android:text="@string/touchdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/TeamBScore"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/fieldgoalTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:onClick="addThreeForTeamB"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/fieldgoal"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/touchdownTeamB" />

    <Button
        android:id="@+id/touchbackTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="24dp"
        android:onClick="addTwoForTeamB"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/touchback"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/fieldgoalTeamB" />

    <ImageButton
        android:id="@+id/extraPointImageButtonTeamB"
        android:layout_width="39dp"
        android:layout_height="38dp"
        android:onClick="addOneForTeamB"
        app:layout_constraintBottom_toBottomOf="@+id/touchdownTeamB"
        app:layout_constraintEnd_toStartOf="@+id/touchdownTeamB"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/touchdownTeamB"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <Button
        android:id="@+id/teamAUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="prevScoreA"
        android:text="@string/undo"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/touchbackTeamA"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/teamBUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="prevScoreB"
        android:text="@string/undo"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/touchbackTeamB"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/teamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/teamA"
        app:layout_constraintEnd_toStartOf="@+id/TeamAScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/teamB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TeamBScore"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="resetScore"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/resetScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="auto"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintEnd_toStartOf="@+id/TeamAScore"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/teamA" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintEnd_toEndOf="@+id/checkBox8"
        app:layout_constraintStart_toStartOf="@+id/checkBox8"
        app:layout_constraintTop_toBottomOf="@+id/checkBox8" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxes"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/checkBox3"
        app:layout_constraintStart_toStartOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toEndOf="@+id/TeamBScore"
        app:layout_constraintTop_toBottomOf="@+id/teamB" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/checkBox5"
        app:layout_constraintStart_toStartOf="@+id/checkBox5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/checkBox6"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="@+id/checkBox6"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/checkBox7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBox7"
        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxes"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/checkBox9"
        app:layout_constraintStart_toStartOf="@+id/checkBox9"
        app:layout_constraintTop_toBottomOf="@+id/checkBox9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/touchdownTeamB"
        app:layout_constraintEnd_toStartOf="@+id/checkBox5"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/TeamBScore" />


</androidx.constraintlayout.widget.ConstraintLayout>